--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="nav-logo">
-                <img src="Glow Ren.png" alt="logo"></div>
+                <img src="haldwani.png" alt="logo" ></div>
             <div class="nav-menu">
                 <ion-icon name="menu-outline"></ion-icon>
             
@@ -25,10 +25,12 @@
     </header>
     <main>
 <!-- Template section -->
+
         <section class="section-one template">
             <img src="pexels-steve-johnson-4693135.jpg" alt="template">
         </section>
 <!-- About us section -->
+<div class="content">
         <section class="section-two About-us">
             <h1>About Us</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -123,7 +125,7 @@
 
     </div>
 </section>
-
+</div>
     </main>
     <footer></footer>
 </body>
